syntax = "proto2";
package buffers;

import "google/protobuf/descriptor.proto";
extend google.protobuf.FieldOptions {
  optional string gmx = 50000;
  optional string gmx_id = 50001;
  optional bool file_path = 50002;
}
