syntax = "proto2";
package buffers.resources;

import "options.proto";

message Shader {
  optional int32 id = 2;

  optional string type = 3;
  optional bool precompile = 4;

  optional string vertex_code = 5;
  optional string fragment_code = 6;
}
